--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
 <section class="hero-slider">
     <div class="slider">
-        <div class="slide"><img src="data1:images/Picture1.jpg" alt="PoP liposomes"></div>
-        <div class="slide"><img src="data1:images/Picture2.jpg" alt="Cobalt Porphyrin Liposomes"></div>
-        <div class="slide"><img src="data1:images/Picture3.jpg" alt="Nanoparticle degradation"></div>
-        <div class="slide"><img src="data1:images/Picture4.jpg" alt="Liposome lypholization"></div>
-        <div class="slide"><img src="data1:images/Picture5.jpg" alt="Cancer cell targeting"></div>
+        <div class="slide"><img src="data1/images/Picture1.jpg" alt="PoP liposomes"></div>
+        <div class="slide"><img src="data1/images/Picture2.jpg" alt="Cobalt Porphyrin Liposomes"></div>
+        <div class="slide"><img src="data1/images/Picture3.jpg" alt="Nanoparticle degradation"></div>
+        <div class="slide"><img src="data1/images/Picture4.jpg" alt="Liposome lypholization"></div>
+        <div class="slide"><img src="data1/images/Picture5.jpg" alt="Cancer cell targeting"></div>
     </div>
 </section>
 
