--- a/publications.html
+++ b/publications.html
@@ -42,6 +42,17 @@
     <h1>Publications — Lovell Lab</h1>
     <p>See also the <a href="https://scholar.google.com" target="_blank">Google Scholar profile</a>.</p>
 
+    <!-- 2021 -->
+    <div class="pub-year">
+        <h2>2021</h2>
+    </div>
+    <div class="publication">
+        <span class="authors">Yang, Hughes, Kelkar, Yu, Cheng, Park, Huang, Lovell & Neelamegham</span> – 
+        <a href="https://doi.org" class="journal">Inhibition of SARS-CoV-2 viral entry upon blocking N- and O-glycan elaboration</a>
+    </div>
+    <div class="publication">
+        <span class="authors">Wan, Sun, Tian, Lu, Dai, Meng, Huang, He, Wu, Zhang, Jiang, Hu, Wu, Lovell, Jin & Yang</span> – 
+        <a href="https://doi.org" class="journal">Irradiated tumor cell-derived microparticles mediate tumor eradication via cell killing and immune reprogramming</a>
     <!-- 2020 -->
     <div class="pub-year">
         <h2>2020</h2>
