--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,7 @@
 <body>
 
     <h1>Publications — Lovell Lab</h1>
-    <p>See also the <a href="https://scholar.google.com" target="_blank">Google Scholar profile</a>.</p>
+    <p>See also the <a href="https://scholar.google.com/citations?user=19ZgzrAAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar profile</a>.</p>
 
     <!-- 2021 -->
     <div class="pub-year">
