--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,23 @@
         }
     </style>
 </head>
+    <header>
+    <div class="logo-container">
+        <a href="index.html">
+            <img src="graphics/banner.jpg" class="logo" alt="Lovell Lab Banner">
+        </a>
+    </div>
+
+    <nav>
+        <ul class="nav-links">
+            <li><a href="index.html">Main page</a></li>
+            <li><a href="research_interests.html" class="active">Research Interests</a></li>
+            <li><a href="publications.html">Publications</a></li>
+            <li><a href="people.html">People</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 <body>
 
     <h1>Publications — Lovell Lab</h1>
