--- a/publications.html
+++ b/publications.html
@@ -4,15 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lovell Lab Publications</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f9f9f9;
-            color: #333;
-        }
-        h1, h2 {
-            color: #224488;
+       <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<header>
+    <div class="logo-container">
+        <a href="index.html">
+            <img src="graphics/banner.jpg" class="logo" alt="Lovell Lab Banner">
+        </a>
+    </div>
+
+    <nav>
+        <ul class="nav-links">
+            <li><a href="index.html">Main page</a></li>
+            <li><a href="research_interests.html" class="active">Research Interests</a></li>
+            <li><a href="publications.html">Publications</a></li>
+            <li><a href="people.html">People</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+<main>
         }
         .pub-year {
             margin-top: 40px;
@@ -35,25 +49,7 @@
         .journal {
             font-weight: bold;
         }
-    </style>
-</head>
-    <header>
-    <div class="logo-container">
-        <a href="index.html">
-            <img src="graphics/banner.jpg" class="logo" alt="Lovell Lab Banner">
-        </a>
-    </div>
-
-    <nav>
-        <ul class="nav-links">
-            <li><a href="index.html">Main page</a></li>
-            <li><a href="research_interests.html" class="active">Research Interests</a></li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="people.html">People</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+  
 <body>
 
     <h1>Publications — Lovell Lab</h1>
