--- a/publications.html
+++ b/publications.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lovell Lab Publications</title>
-       <link rel="stylesheet" href="style.css">
+    <title>Publications | Lovell Lab</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -22,11 +22,16 @@
             <li><a href="research_interests.html" class="active">Research Interests</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="people.html">People</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
+
+
 <main>
+
+<section class="page-intro">
+
         }
         .pub-year {
             margin-top: 40px;
