--- a/people.html
+++ b/people.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Jonathan F. Lovell | People</title>
-    <meta name="keywords" content="Nanotechnology, Cancer Therapeutics, Porphyrins">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lovell Lab | University at Buffalo</title>
+    <meta name="description" content="Lovell Lab at University at Buffalo develops nanomedicine for diagnostics and cancer therapy.">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-<div id="wrapper">
-
-    <!-- Banner -->
-    <header id="top_banner">
+<header>
+    <div class="logo-container">
         <a href="index.html">
-            <img src="graphics/banner.jpg" class="logo" alt="Jonathan F. Lovell">
+            <img src="graphics/banner.jpg" alt="Lovell Lab Banner" class="logo">
         </a>
-    </header>
+    </div>
 
-    <!-- Navigation -->
-    <nav id="links">
-        <ul>
+    <nav>
+        <ul class="nav-links">
             <li><a href="index.html">Main page</a></li>
             <li><a href="research_interests.html">Research Interests</a></li>
             <li><a href="publications.html">Publications</a></li>
-            <li><a href="people.html" class="active">People</a></li>
+            <li><a href="people.html">People</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+</header>
 
     <!-- Main Content -->
     <main id="main_text">
