--- a/people.html
+++ b/people.html
@@ -32,7 +32,7 @@
 
         <!-- PI Section -->
         <section class="person-box">
-            <img src="graphics/members/jon_web.jpg" class="profile-img right" alt="Jonathan Lovell">
+            <img src="graphics/members/jon_web.jpg" class="profile-img" alt="Jonathan Lovell">
 
             <h1>Jonathan Lovell, PI</h1>
             <p class="email">jflovell@buffalo.edu</p>
@@ -54,21 +54,21 @@
         <!-- Template used for each member (kept your content but improved formatting) -->
         
         <section class="person-box">
-            <img src="graphics/members/boyang_web.jpg" class="profile-img left" alt="Boyang Sun">
+            <img src="graphics/members/boyang_web.jpg" class="profile-img" alt="Boyang Sun">
             <h2>Boyang Sun</h2>
             <p class="email">boyangsu@buffalo.edu</p>
             <p>Boyang is a PhD student working on new drug formulations. He previously earned his MS in Chemical Engineering at UB and BS in Pharmaceutical Engineering at Henan Agricultural University.</p>
         </section>
 
         <section class="person-box">
-            <img src="graphics/members/weichiao_web.jpg" class="profile-img right" alt="Wei-Chiao Huang">
+            <img src="graphics/members/weichiao_web.jpg" class="profile-img" alt="Wei-Chiao Huang">
             <h2>Wei-Chiao Huang</h2>
             <p class="email">weichiao@buffalo.edu</p>
             <p>Wei-Chiao is a postdoctoral scholar who completed her MS at Tsing Hua University and her PhD in liposomal vaccines in Taiwan.</p>
         </section>
 
         <section class="person-box">
-            <img src="graphics/members/xuedan_web.jpg" class="profile-img left" alt="Xuedan He">
+            <img src="graphics/members/xuedan_web.jpg" class="profile-img" alt="Xuedan He">
             <h2>Xuedan He</h2>
             <p class="email">xuedanhe@buffalo.edu</p>
             <p>Xuedan recently completed her PhD developing liposomal peptide cancer vaccines. She previously earned an MS in Nanochemistry from University of Madiera.</p>
@@ -91,6 +91,27 @@
         <!-- ALUMNI -->
         <h1>Alumni</h1>
 
+        <section class="alumni-box">
+            <img src="graphics/members/boyang_web.jpg" class="alumni-img" alt="Boyang Sun">
+            <h2>Boyang Sun</h2>
+            <p class="email">boyangsu@buffalo.edu</p>
+            <p>Boyang is a PhD student working on new drug formulations. He previously earned his MS in Chemical Engineering at UB and BS in Pharmaceutical Engineering at Henan Agricultural University.</p>
+        </section>
+
+        <section class="alumni-box">
+            <img src="graphics/members/weichiao_web.jpg" class="alumni-img" alt="Wei-Chiao Huang">
+            <h2>Wei-Chiao Huang</h2>
+            <p class="email">weichiao@buffalo.edu</p>
+            <p>Wei-Chiao is a postdoctoral scholar who completed her MS at Tsing Hua University and her PhD in liposomal vaccines in Taiwan.</p>
+        </section>
+
+        <section class="alumni-box">
+            <img src="graphics/members/xuedan_web.jpg" class="alumni-img" alt="Xuedan He">
+            <h2>Xuedan He</h2>
+            <p class="email">xuedanhe@buffalo.edu</p>
+            <p>Xuedan recently completed her PhD developing liposomal peptide cancer vaccines. She previously earned an MS in Nanochemistry from University of Madiera.</p>
+        </section>
+        
         <section class="alumni-box">
             <img src="graphics/members/yumiao_web.jpg" class="alumni-img" alt="Yumiao Zhang">
             <h3>Yumiao Zhang</h3>
