--- a/people.html
+++ b/people.html
@@ -33,8 +33,9 @@
         <!-- PI Section -->
         <section class="person-box">
             <img src="graphics/members/jon_web.jpg" class="profile-img" alt="Jonathan Lovell">
-
-            <h1>Jonathan Lovell, PI</h1>
+            
+            <div class="person-info">
+            <h2>Jonathan Lovell, PI</h2>
             <p class="email">jflovell@buffalo.edu</p>
 
             <p>
