--- a/people.html
+++ b/people.html
@@ -35,16 +35,15 @@
             <img src="graphics/members/jon_web.jpg" class="profile-img" alt="Jonathan Lovell">
             
             <div class="person-info">
-            <h2>Jonathan Lovell, PI</h2>
-            <p class="email">jflovell@buffalo.edu</p>
-
-            <p>
+                <h2>Jonathan Lovell, PI</h2>
+                <p class="email">jflovell@buffalo.edu</p>
+                <p>
                 Jonathan Lovell is an Associate Professor in the Biomedical Engineering Department at UB. 
                 He received his PhD from the Institute for Biomaterials and Biomedical Engineering at the University of Toronto 
                 in 2012 in the lab of Gang Zheng. He previously completed his MSc at McMaster University and his undergraduate degree 
                 at the University of Waterloo.
-            </p>
-
+                </p>
+            </div>
         </section>
 
         <hr>
