--- a/people.html
+++ b/people.html
@@ -33,7 +33,6 @@
         <!-- PI Section -->
         <section class="person-box">
             <img src="graphics/members/jon_web.jpg" class="profile-img" alt="Jonathan Lovell">
-            
             <div class="person-info">
                 <h2>Jonathan Lovell, PI</h2>
                 <p class="email">jflovell@buffalo.edu</p>
@@ -52,6 +51,16 @@
         <h1>Current Members</h1>
 
         <!-- Template used for each member (kept your content but improved formatting) -->
+        <section class="person-box">
+            <img src="graphics/members/yiting_web.jpg" class="profile-img" alt="Yiting Song">
+            <div class="person-info">
+                <h2>Yiting Song, PhD student</h2>
+                <p class="email">yitingso@buffalo.edu</p>
+                <p>
+                Yiting is a MS student working on vaccine projects.
+                </p>
+            </div>
+        </section>
         
         <section class="person-box">
             <img src="graphics/members/boyang_web.jpg" class="profile-img" alt="Boyang Sun">
