--- a/people.html
+++ b/people.html
@@ -57,32 +57,22 @@
                 <h2>Yiting Song, PhD student</h2>
                 <p class="email">yitingso@buffalo.edu</p>
                 <p>
-                Yiting is a MS student working on vaccine projects.
+                Yiting is a PhD student working on vaccine projects.
+                </p>
+            </div>
+        </section>
+
+        <section class="person-box">
+            <img src="graphics/members/yuan_web.jpg" class="profile-img" alt="Yuan Luo">
+            <div class="person-info">
+                <h2>Yiting Song, PhD student</h2>
+                <p class="email">yuanluo@buffalo.edu</p>
+                <p>
+                Yuan completed her MS from China Pharmaceutical University and is pursuing a PhD in Biomedical Engineering.
                 </p>
             </div>
         </section>
         
-        <section class="person-box">
-            <img src="graphics/members/boyang_web.jpg" class="profile-img" alt="Boyang Sun">
-            <h2>Boyang Sun</h2>
-            <p class="email">boyangsu@buffalo.edu</p>
-            <p>Boyang is a PhD student working on new drug formulations. He previously earned his MS in Chemical Engineering at UB and BS in Pharmaceutical Engineering at Henan Agricultural University.</p>
-        </section>
-
-        <section class="person-box">
-            <img src="graphics/members/weichiao_web.jpg" class="profile-img" alt="Wei-Chiao Huang">
-            <h2>Wei-Chiao Huang</h2>
-            <p class="email">weichiao@buffalo.edu</p>
-            <p>Wei-Chiao is a postdoctoral scholar who completed her MS at Tsing Hua University and her PhD in liposomal vaccines in Taiwan.</p>
-        </section>
-
-        <section class="person-box">
-            <img src="graphics/members/xuedan_web.jpg" class="profile-img" alt="Xuedan He">
-            <h2>Xuedan He</h2>
-            <p class="email">xuedanhe@buffalo.edu</p>
-            <p>Xuedan recently completed her PhD developing liposomal peptide cancer vaccines. She previously earned an MS in Nanochemistry from University of Madiera.</p>
-        </section>
-
         <!-- Continue all other members below in same format... -->
         <!-- (I kept the structure but not repeating here for brevity—you can paste all members one by one) -->
 
@@ -99,7 +89,17 @@
 
         <!-- ALUMNI -->
         <h1>Alumni</h1>
-
+        <section class="alumni-box">
+            <img src="graphics/members/shiqi_web.jpg" class="profile-img" alt="Shiqi Zhou">
+            <div class="person-info">
+                <h2>Shiqi Zhou</h2>
+                <p class="email">shiqizho@buffalo.edu</p>
+                <p>
+                Shiqi completed her MS degree in an ETEC vaccine and is continuing her studies focusing on CD8 T cell epitope vaccines. She earned her PhD degree in 2025.
+                </p>
+            </div>
+        </section>
+        
         <section class="alumni-box">
             <img src="graphics/members/boyang_web.jpg" class="alumni-img" alt="Boyang Sun">
             <h2>Boyang Sun</h2>
