--- a/publications.html
+++ b/publications.html
@@ -42,12 +42,12 @@
         <h2>2021</h2>
     </div>
     <div class="publication">
-        <span class="authors">Yang, Hughes, Kelkar, Yu, Cheng, Park, Huang, Lovell & Neelamegham</span> – 
-        <a href="https://doi.org" class="journal">Inhibition of SARS-CoV-2 viral entry upon blocking N- and O-glycan elaboration</a>
+        <span class="authors">Sun, H., Yan, L., Zhang, R., Lovell, J. F., Wu, Y., Cheng, C.</span> – 
+        <a href="https://pubs.rsc.org/en/content/articlehtml/2021/bm/d1bm00393c" class="journal">A sulfobetaine zwitterionic polymer–drug conjugate for multivalent paclitaxel and gemcitabine co-delivery</a>
     </div>
     <div class="publication">
-        <span class="authors">Wan, Sun, Tian, Lu, Dai, Meng, Huang, He, Wu, Zhang, Jiang, Hu, Wu, Lovell, Jin & Yang</span> – 
-        <a href="https://doi.org" class="journal">Irradiated tumor cell-derived microparticles mediate tumor eradication via cell killing and immune reprogramming</a>
+        <span class="authors">Kumar, S., Jiang, D., Sun, B., Seeley, K.V., Engle, J.W., Sia, Z., He, X., Neelamegham, S., Cai, W. and Lovell, J.F.</span> – 
+        <a href="https://advanced.onlinelibrary.wiley.com/doi/full/10.1002/anbr.202000013" class="journal">Labeling of Erythrocytes by Porphyrin-Phospholipid</a>
     <!-- 2020 -->
     <div class="pub-year">
         <h2>2020</h2>
