--- a/publications.html
+++ b/publications.html
@@ -36,7 +36,36 @@
 
     <h1>Publications — Lovell Lab</h1>
     <p>See also the <a href="https://scholar.google.com/citations?user=19ZgzrAAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar profile</a>.</p>
-
+<!-- 2026 -->
+     <div class="pub-year">
+        <h2>2026</h2>
+    </div>
+    <div class="publication">
+        <span class="authors">T Xu, J Huang, Y Liu, L Lu, JF Lovell, M Zhu, H Jin</span> – 
+        <a href="https://www.nature.com/articles/s41698-025-01260-6" class="journal">A machine learning-defined cellular senescence signature systematically enhances prognostication and guides immunotherapy strategies for the treatment of gliomas</a>
+    </div>
+    <div class="publication">
+        <span class="authors">M Petion, J Lovell, Y Song, S Zhou, MD Hicar</span> – 
+        <a href="https://academic.oup.com/ofid/article/13/Supplement_1/ofaf695.1660/8421701" class="journal">P-1474. Development of an HIV vaccine based on 2C6, an antibody that targets a conformational gp41 epitope with cross-clade recognition and robust antibody dependent cell cytotoxicity </a>
+    </div>
+    <div class="publication">
+        <span class="authors">R Prasad, U Chitgupi, SK Metkar, JF Lovell</span> – 
+        <a href="https://www.sciencedirect.com/science/chapter/edited-volume/abs/pii/B9780443222535000303" class="journal">Chapter 21 - Optotheranostics for cancer</a>
+        <!-- 2025 -->
+     <div class="pub-year">
+        <h2>2025</h2>
+    </div>
+    <div class="publication">
+        <span class="authors">T Xu, J Huang, Y Liu, L Lu, JF Lovell, M Zhu, H Jin</span> – 
+        <a href="https://www.nature.com/articles/s41698-025-01260-6" class="journal">A machine learning-defined cellular senescence signature systematically enhances prognostication and guides immunotherapy strategies for the treatment of gliomas</a>
+    </div>
+    <div class="publication">
+        <span class="authors">M Petion, J Lovell, Y Song, S Zhou, MD Hicar</span> – 
+        <a href="https://academic.oup.com/ofid/article/13/Supplement_1/ofaf695.1660/8421701" class="journal">P-1474. Development of an HIV vaccine based on 2C6, an antibody that targets a conformational gp41 epitope with cross-clade recognition and robust antibody dependent cell cytotoxicity </a>
+    </div>
+    <div class="publication">
+        <span class="authors">R Prasad, U Chitgupi, SK Metkar, JF Lovell</span> – 
+        <a href="https://www.sciencedirect.com/science/chapter/edited-volume/abs/pii/B9780443222535000303" class="journal">Chapter 21 - Optotheranostics for cancer</a>
     <!-- 2021 -->
     <div class="pub-year">
         <h2>2021</h2>
@@ -74,7 +103,7 @@
         <span class="authors">Sun, Yan, Chang, Carter, Zhang, Slyker, Lovell, Wu & Cheng</span> – 
         <a href="https://doi.org" class="journal">A multifunctional biodegradable brush polymer-drug conjugate for paclitaxel/gemcitabine co-delivery and tumor imaging</a>
     </div>
-    <!-- Continue adding other years (2018, 2017, 2016, etc.) -->
+   
 
     <!-- Older Years (example) -->
     <div class="pub-year">
