--- a/people.html
+++ b/people.html
@@ -37,7 +37,7 @@
                 <h2>Jonathan Lovell, PI</h2>
                 <p class="email">jflovell@buffalo.edu</p>
                 <p>
-                Jonathan Lovell is an Associate Professor in the Biomedical Engineering Department at UB. 
+                Jonathan Lovell is a Distinguished Professor in the Biomedical Engineering Department at UB. 
                 He received his PhD from the Institute for Biomaterials and Biomedical Engineering at the University of Toronto 
                 in 2012 in the lab of Gang Zheng. He previously completed his MSc at McMaster University and his undergraduate degree 
                 at the University of Waterloo.
@@ -65,7 +65,7 @@
         <section class="person-box">
             <img src="graphics/members/yuan_web.jpg" class="profile-img" alt="Yuan Luo">
             <div class="person-info">
-                <h2>Yiting Song, PhD student</h2>
+                <h2>Yuan Luo, PhD student</h2>
                 <p class="email">yuanluo@buffalo.edu</p>
                 <p>
                 Yuan completed her MS from China Pharmaceutical University and is pursuing a PhD in Biomedical Engineering.
