--- a/people.html
+++ b/people.html
@@ -72,6 +72,62 @@
                 </p>
             </div>
         </section>
+
+        <section class="person-box">
+            <img src="graphics/members/wen-ling_web.jpg" class="profile-img" alt="Wen-Ling Hsu">
+            <div class="person-info">
+                <h2>Wen-Ling Hsu, PhD student</h2>
+                <p class="email">wenlingh@buffalo.edu</p>
+                <p>
+                Wen-Ling holds a M.S. degree in Biochemistry and Molecular Biology (2017-2019) and a B.S. degree in Biotechnology and Laboratory Science in Medicine (2013-2017) from National Yang-Ming University in Taiwan. She is pursuing her PhD degree in UB and working on vaccine development for tuberculosis and rheumatoid arthritis.
+                </p>
+            </div>
+        </section>
+
+                <section class="person-box">
+            <img src="graphics/members/qinzhe_web.jpg" class="profile-img" alt="Qinzhe Li">
+            <div class="person-info">
+                <h2>Qinzhe Li, PhD student</h2>
+                <p class="email">qinzheli@buffalo.edu</p>
+                <p>
+                Qinzhe Li completed his MS from ?? and is pursuing a PhD in Biomedical Engineering.
+                </p>
+            </div>
+        </section>
+
+                <section class="person-box">
+            <img src="graphics/members/reuben_web.jpg" class="profile-img" alt="Reuben Saamwan Pul">
+            <div class="person-info">
+                <h2>Reuben Saamwan Pul, PhD student</h2>
+                <p class="email">reubenmw@buffalo.edu</p>
+                <p>
+                Reuben completed her MS from UB BME in 2025 and is pursuing a PhD in Biomedical Engineering.
+                </p>
+            </div>
+        </section>
+
+                <section class="person-box">
+            <img src="graphics/members/yuan_web.jpg" class="profile-img" alt="Yuan Luo">
+            <div class="person-info">
+                <h2>Yuan Luo, PhD student</h2>
+                <p class="email">yuanluo@buffalo.edu</p>
+                <p>
+                Yuan completed her MS from China Pharmaceutical University and is pursuing a PhD in Biomedical Engineering.
+                </p>
+            </div>
+        </section>
+
+                <section class="person-box">
+            <img src="graphics/members/yuan_web.jpg" class="profile-img" alt="Yuan Luo">
+            <div class="person-info">
+                <h2>Yuan Luo, PhD student</h2>
+                <p class="email">yuanluo@buffalo.edu</p>
+                <p>
+                Yuan completed her MS from China Pharmaceutical University and is pursuing a PhD in Biomedical Engineering.
+                </p>
+            </div>
+        </section>
+
         
         <!-- Continue all other members below in same format... -->
         <!-- (I kept the structure but not repeating here for brevity—you can paste all members one by one) -->
