--- a/people.html
+++ b/people.html
@@ -79,7 +79,7 @@
                 <h2>Wen-Ling Hsu, PhD student</h2>
                 <p class="email">wenlingh@buffalo.edu</p>
                 <p>
-                Wen-Ling holds a M.S. degree in Biochemistry and Molecular Biology (2017-2019) and a B.S. degree in Biotechnology and Laboratory Science in Medicine (2013-2017) from National Yang-Ming University in Taiwan. She is pursuing her PhD degree in UB and working on vaccine development for tuberculosis and rheumatoid arthritis.
+                Wen-Ling holds a M.S. degree in Biochemistry and Molecular Biology from National Yang-Ming University in Taiwan. She is pursuing her PhD degree in UB and working on vaccine development for tuberculosis and rheumatoid arthritis.
                 </p>
             </div>
         </section>
