--- a/publications.html
+++ b/publications.html
@@ -66,16 +66,42 @@
     <div class="publication">
         <span class="authors">R Prasad, U Chitgupi, SK Metkar, JF Lovell</span> – 
         <a href="https://www.sciencedirect.com/science/chapter/edited-volume/abs/pii/B9780443222535000303" class="journal">Chapter 21 - Optotheranostics for cancer</a>
-    <!-- 2021 -->
+        </div>
+    <div class="publication">
+        <span class="authors">CL Dai, Y Song, Y Chen, YC Tung, WC Huang, CX Gong, JF Lovell</span> – 
+        <a href="https://www.sciencedirect.com/science/article/pii/S266635462500225X" class="journal">Therapeutic nanoliposome vaccine targeting multiple Aβ and tau epitopes reduces AD-like brain pathologies and rescues cognitive deficits in 3xTg-AD mice</a>
+      </div>
+    <div class="publication">
+        <span class="authors">Song Y., Deng B., Long C. A., Li Q., Diakite M., Huang W. C., Zhou S., Luo Y., Ivanochko D., MacGill R. S., Julien J. P., Miura K., Lovell J. F.</span> – 
+        <a href="https://academic.oup.com/jid/article/232/6/1418/8160841" class="journal">Priming or Boosting Plasmodium falciparum Transmission-Blocking Responses With Recombinant Vaccines or Gametocyte Extract</a>
+     </div>
+    <div class="publication">
+        <span class="authors">Y. Cheng, C. Huang, R. W. Bing, E. Zheng, H. Zhang, W. Xu, C. Mayerl, R. German, C. M. Steele, J. F. Lovell, L. Zhang, J. Xia </span> – 
+        <a href="https://link.springer.com/article/10.1007/s44258-025-00062-6" class="journal">Dysphagia assessment based on photoacoustic imaging: a pilot ex vivo and in vivo study in infant swine models</a>
+     </div>
+    <div class="publication">
+        <span class="authors">B. G. Morreale, A. M. Monell, H. Yu, D. B. Sykes, J. F. Lovell, M. J. Nemeth, S. I. Abrams</span> – 
+        <a href="https://jitc.bmj.com/content/13/Suppl_2/A796" class="journal">693 A novel tri-therapy overcoming immune suppression, immune exhaustion, and low antigen-specific T cell infiltration elicits robust antitumor responses</a>
+    </div>
+    <div class="publication">
+        <span class="authors">Y. Jiao, S.H. Mahmoud, C. Ye, Y. Luo, W.C. Huang, Q. Li, S. Zhou, Y. Song, M. Tsuji, L. Martinez-Sobrido, J.F. Lovell</span> – 
+        <a href="https://www.mdpi.com/1999-4923/17/11/1422" class="journal">In Vivo Iterative Adjuvant Screening Identifies an Intranasal Vaccine Formulation for Elicitation of Protective Mucosal Immune Responses Against SARS-CoV-2</a>
+   </div>
+    <div class="publication">
+        <span class="authors">T. Xu, M. Yang, J. Huang, L. Lu, D. Deng, Y. Sun, J.F. Lovell, Z. Lin, Y. Zheng, H. Jin</span> – 
+        <a href="https://www.researchsquare.com/article/rs-7763100/v1" class="journal">Single-cell profiling of gastric cancer ascites reveals immunosuppressive remodeling and an epithelial-immune dual phenotype signature predictive for PD-1 immunotherapy responses</a>
+  
+    
+        <!-- 2021 -->
     <div class="pub-year">
         <h2>2021</h2>
     </div>
     <div class="publication">
-        <span class="authors">Sun, H., Yan, L., Zhang, R., Lovell, J. F., Wu, Y., Cheng, C.</span> – 
+        <span class="authors">Sun H., Yan L., Zhang R., Lovell J. F., Wu Y., Cheng C.</span> – 
         <a href="https://pubs.rsc.org/en/content/articlehtml/2021/bm/d1bm00393c" class="journal">A sulfobetaine zwitterionic polymer–drug conjugate for multivalent paclitaxel and gemcitabine co-delivery</a>
     </div>
     <div class="publication">
-        <span class="authors">Kumar, S., Jiang, D., Sun, B., Seeley, K.V., Engle, J.W., Sia, Z., He, X., Neelamegham, S., Cai, W. and Lovell, J.F.</span> – 
+        <span class="authors">Kumar S., Jiang D., Sun B., Seeley K.V., Engle J.W., Sia Z., He X., Neelamegham S., Cai W. and Lovell J.F.</span> – 
         <a href="https://advanced.onlinelibrary.wiley.com/doi/full/10.1002/anbr.202000013" class="journal">Labeling of Erythrocytes by Porphyrin-Phospholipid</a>
     <!-- 2020 -->
     <div class="pub-year">
